--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,9 @@
 
 .fix-width {
   flex: 0 0 20%;
-  max-width: 20%; }
+  max-width: 20%;
+  padding-right: 5px;
+  padding-left: 5px; }
 
 .clear-fix {
   clear: both; }
@@ -68,8 +70,6 @@ header .header-top {
       font-family: "UTM Avo"; }
       header .header-top ul li a img {
         margin-top: -3px; }
-  header .header-top .logo img {
-    width: 60%; }
   header .header-top .search input {
     border: none;
     outline: none;
@@ -215,12 +215,14 @@ header .nav {
   border: none; }
 
 .list-carried {
-  margin: 20px 0; }
+  padding: 20px 0;
+  background: #f0f0f0; }
   .list-carried ul {
     display: flex; }
     .list-carried ul li {
       border: 1px solid #d6cece;
-      padding: 10px 18px; }
+      padding: 10px 18px;
+      background: white; }
       .list-carried ul li a {
         color: #73cbdc;
         font-family: 14px;
@@ -237,8 +239,10 @@ header .nav {
 .product-top .card {
   border: none; }
   .product-top .card:hover {
-    box-shadow: -1px 1px 10px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: -2px 1px 10px 0px rgba(0, 0, 0, 0.5);
     transition: all 0.5s ease; }
+    .product-top .card:hover .card-title {
+      color: #fff200; }
   .product-top .card .card-body {
     padding: 10px 10px; }
     .product-top .card .card-body .card-title {
@@ -262,8 +266,10 @@ header .nav {
 .product-wholesale-price .card {
   border: none; }
   .product-wholesale-price .card:hover {
-    box-shadow: -1px 1px 10px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: -2px 1px 10px 0px rgba(0, 0, 0, 0.5);
     transition: all 0.5s ease; }
+    .product-wholesale-price .card:hover .card-title {
+      color: #fff200; }
   .product-wholesale-price .card .card-body {
     padding: 10px 10px; }
     .product-wholesale-price .card .card-body .card-title {
@@ -294,5 +300,17 @@ header .nav {
 
 .cptr {
   background: #ffd100; }
+  .cptr p {
+    font-family: "UTM Avo"; }
+
+@media screen and (min-width: 240px) and (max-width: 768px) {
+  .fix-width {
+    max-width: 100%;
+    flex: 0 0 100%; }
+
+  .list-carried ul {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    height: 50px; } }
 
 /*# sourceMappingURL=style.css.map */
