--- a/css/style.scss
+++ b/css/style.scss
@@ -12,10 +12,12 @@ $bg-active:#ffd100;
 @mixin card-bt {
     .card {
         border: none;
-
         &:hover {
-            box-shadow: -1px 1px 10px 2px rgba(0, 0, 0, 0.5);
+            box-shadow: -2px 1px 10px 0px rgba(0, 0, 0, 0.5);
             transition: all 0.5s ease;
+            .card-title{
+                color: $bg-body;
+            }
         }
 
         .card-body {
@@ -47,6 +49,8 @@ $bg-active:#ffd100;
 .fix-width {
     flex: 0 0 20%;
     max-width: 20%;
+    padding-right: 5px;
+    padding-left: 5px;
 }
 
 .clear-fix {
@@ -136,9 +140,9 @@ header {
         }
 
         .logo {
-            img {
-                width: 60%
-            }
+            // img {
+            //     width: 60%
+            // }
         }
 
         .search {
@@ -382,15 +386,15 @@ header {
 }
 
 .list-carried {
-    margin: 20px 0;
-
+    padding: 20px 0;
+    background: #f0f0f0;
     ul {
         display: flex;
 
         li {
             border: 1px solid #d6cece;
             padding: 10px 18px;
-
+            background: white;
             a {
                 color: #73cbdc;
                 font-family: $fz-discription;
@@ -458,4 +462,9 @@ header {
 
 .cptr {
     background: $bg-active;
+    p{
+        font-family: $ff-discription;
+    }
 }
+
+@import "responsive";
