--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -1,10 +1,13 @@
 $fz-title:25px;
 $fz-discription-rp:12px;
 
-@media screen  and (min-width: 240px) and (max-width: 768px) {
+@media screen  and (min-width: 240px) and (max-width: 767px) {
     .fix-width{
-        max-width: 100%;
+        max-width: 50%;
         flex: 0 0 100%;
+    }
+    .product-top .card .card-body .card-text,.product-wholesale-price .card .card-body .card-text{
+        font-size: $fz-discription-rp;
     }
     .list-carried ul{
         overflow-x: scroll;
@@ -38,5 +41,27 @@ $fz-discription-rp:12px;
     }
     .list-carried ul li{
         padding: 10px 21px;
+    }
+    .mm-toggle{
+        float: right;
+    }
+    .mm-toggle-wrap{
+        background: transparent;
+        display: block;
+    }
+    .mobile-menu .mm-search{
+        background: transparent;
+    }
+    .logo h1{
+        display: none;
+    }
+    .header-top .mobile-menu a{
+        color: black;
+    }
+    .header-top .mobile-menu li{
+        padding: 0;
+    }
+    #page{
+        top: -15px;
     }
 }
