--- a/css/style.scss
+++ b/css/style.scss
@@ -52,7 +52,15 @@ $bg-active:#ffd100;
     padding-right: 5px;
     padding-left: 5px;
 }
-
+.active-2{
+    background: $bg-active;
+}
+.fixed{
+    position: fixed;
+    width: 100%;
+    z-index: 9999;
+    top: 0;
+}
 .clear-fix {
     clear: both;
 }
@@ -343,7 +351,7 @@ header {
 
                 .nav-link {
                     font-size: $fz-nav;
-                    padding: 0 30px;
+                    padding: 10px 30px;
                     color: black;
 
                     .fa-home {
@@ -466,9 +474,61 @@ header {
         font-family: $ff-discription;
     }
 }
+// mobile-menu
 .mm-toggle-wrap{
     display: none;
 }
+.button-wrap .bttn {
+    width: 150px;
+    background: #FFC000;
+    color: #222;
+    display: inline-block;
+    margin-right: 20px;
+    padding: 10px 0;
+    padding-left: 30px;
+}
 
+pre {
+    font-family: monospace;
+    background-color: #fFF9f9;
+    border: #bb7799 1px solid;
+    color: #440011;
+    font-size: 100%;
+    width: 80%;
+	overflow: auto;
+	word-spacing: normal;
+	word-wrap: normal;
+	padding-top: 15px;
+}
 
+a.options {
+	padding: 5px 10px;
+	background: #FFC000;
+	text-decoration: none;
+	color: #fff;
+	margin-right: 10px;
+	
+}
+.option-wrap{
+	margin-bottom: 10px;
+	background: #eee;
+	padding: 10px 0 10px 10px;
+	width: 80%;
+}
+
+@media (max-width: 767px){
+	.browser-size{
+		display: none;
+	}
+}
+@media (max-width: 640px){
+	.option-wrap, pre{
+		width: 100%;
+	}
+}
+/******** ie11 scroll bar fix *********/
+@-ms-viewport {
+    width: auto !important;
+}
+// end
 @import "responsive";
