--- a/css/css plugin/jquery.mobile-menu.css
+++ b/css/css plugin/jquery.mobile-menu.css
@@ -23,7 +23,7 @@ html {
   width: 100%;
   z-index: 20;
   background: black;
-  opacity: 0.2;
+  opacity: 0.8;
   filter: alpha(opacity=20);
 }
 
@@ -151,7 +151,7 @@ html {
   background-color: white;
 }
 .mobile-menu .home {
-  background-color: #fff200;
+  /* background-color: #fff200; */
   color: white;
   height: 43px;
   overflow: hidden;
@@ -185,9 +185,9 @@ html {
   padding-left: 0;
   position: relative;
 }
-.mobile-menu li:last-child{
-  border: none;
-}
+/* li.logo-mb{
+  border: transparent;
+} */
 .mobile-menu li a {
   display: block;
   overflow: hidden;
@@ -263,7 +263,7 @@ html {
   border-radius: 50%;
 }
 
-@media (max-width: 767px) {
+@media (max-width:1100px) {
   .mm-toggle {
     display: block;
   }
