--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,266 @@
+@media screen and (min-width: 1001px) and (max-width: 1200px) {
+  .list-carried ul {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    height: 55px; }
 
+  header .nav .navbar-nav .nav-item .nav-link .fa-home {
+    font-size: 15px; }
+
+  .list-carried ul li a {
+    font-size: 0; }
+
+  header .nav a,
+  header .nav .navbar-nav .nav-item .nav-link {
+    font-size: 14px; }
+
+  .product-detail .hotline-sp ul li a {
+    font-size: 16pt; } }
+@media (min-width: 767px) {
+  .navbar-expand-lg .navbar-nav {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    justify-content: center; }
+
+  .navbar-expand-lg {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start; } }
+@media screen and (min-width: 768px) and (max-width: 1000px) {
+  .fix-width {
+    max-width: 25%;
+    flex: 0 0 100%; }
+
+  .product-detail h2, .product-detail h4 {
+    font-size: 18px; }
+
+  .product-detail .camketbanhag ul li {
+    font-size: 12px; }
+
+  .product-detail .camketbanhag ul {
+    margin-left: 25px; }
+
+  .product-detail .price p {
+    font-size: 12px; }
+
+  .product-detail .price .touchpin .input-group {
+    width: 40%; }
+
+  .product-detail .hotline-sp ul li a {
+    font-size: 11pt; }
+
+  header .nav .navbar-nav .nav-item .nav-link {
+    font-size: 14px;
+    padding: 10px; }
+
+  header .nav .navbar-nav .nav-item .nav-link .fa-home {
+    font-size: 18px; }
+
+  .list-carried ul {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    height: 55px; }
+
+  header .header-top .phone {
+    margin-top: 35px; }
+
+  header .header-top .search input,
+  header .header-top .search .btn-search,
+  header .header-top .phone,
+  header .header-top .shopping-bag,
+  header .nav {
+    display: block; }
+
+  header .header-top .search input {
+    width: 100%; }
+
+  header .header-top .phone a {
+    font-size: 20px; }
+
+  .logo h1 {
+    display: block; }
+
+  header .header-top .shopping-bag::before {
+    left: 10%; }
+
+  header .header-top .shopping-bag a {
+    font-size: 12px;
+    position: relative; }
+
+  header .header-top .phone a img {
+    margin-top: 0px;
+    width: 30px; }
+
+  header .header-top .shopping-bag .check-card {
+    display: none; }
+
+  .navbar-light .navbar-brand {
+    font-size: 14px; }
+
+  header .nav a img {
+    width: 18px; }
+
+  header .nav .is-menu .lv2 .is-menu-1 .bd-lv2 a {
+    font-size: 12px; }
+
+  header .nav .is-menu .lv2 .is-menu-1,
+  header .nav .is-menu .lv2.is-menu-2 {
+    width: 230px; }
+
+  .navbar-collapse {
+    display: block !important; }
+
+  .header-top .mobile-menu a {
+    color: black; }
+
+  header .header-top .search .btn-search .fa-search {
+    font-size: 15px; }
+
+  .header-top .mobile-menu li {
+    padding: 0; }
+
+  #page {
+    top: -15px; }
+
+  .list-carried ul li a {
+    font-size: 0; } }
+@media screen and (min-width: 240px) and (max-width: 767px) {
+  .fix-width {
+    max-width: 50%;
+    flex: 0 0 100%; }
+
+  .login .name input, .login .matkhau input {
+    width: 100%;
+    margin: 0; }
+
+  .login .line-r::before {
+    display: none; }
+
+  .login .submit-login {
+    transform: translateX(0);
+    font-size: 12px; }
+
+  .line-r {
+    text-align: left !important; }
+
+  .line-r h2 {
+    text-align: center !important; }
+
+  .product-top .card .card-body .card-text,
+  .product-wholesale-price .card .card-body .card-text {
+    font-size: 14px; }
+
+  .list-carried ul {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    height: 55px; }
+
+  .list-carried ul li a {
+    font-size: 0; }
+
+  header .header-top .search input,
+  header .header-top .search .btn-search,
+  header .header-top .phone,
+  header .header-top .shopping-bag,
+  header .nav {
+    display: none; }
+
+  .banner img {
+    height: 30vh; }
+
+  .banner .owl-dots {
+    display: none; }
+
+  .discription-ft {
+    text-align: center; }
+
+  .footer img {
+    width: 50%; }
+
+  .cptr p {
+    font-size: 14px;
+    text-align: center !important; }
+
+  .lg-ft {
+    text-align: center; }
+
+  .list-carried ul li {
+    padding: 10px 21px; }
+
+  .mm-toggle {
+    float: left; }
+
+  .mm-toggle-wrap {
+    background: transparent;
+    display: block; }
+
+  .mobile-menu .mm-search {
+    background: transparent; }
+
+  .logo h1 {
+    display: none; }
+
+  .header-top .mobile-menu a {
+    color: black; }
+
+  .header-top .mobile-menu li {
+    padding: 0; }
+
+  #page {
+    top: -15px; }
+
+  .product-detail .camketbanhag {
+    width: 100%;
+    margin-top: 30px; }
+
+  .product-detail h2,
+  .product-detail h4 {
+    font-size: 18px; }
+
+  .product-detail .price p {
+    font-size: 14px; }
+
+  .discription-product {
+    font-size: 14px; }
+
+  .fix-mg {
+    margin-top: 30px; }
+
+  .sp-lienquan {
+    display: none; }
+
+  .product-detail .price .touchpin .input-group {
+    width: 100px; }
+
+  .product-detail .price .btn-add-card .btn-check-shop {
+    padding: 15px 25px; }
+
+  .product-detail .breadcrumb li {
+    font-size: 12px; }
+
+  .breadcrumb-item + .breadcrumb-item::before {
+    padding: 0 5px 0 5px; }
+
+  .product-detail .lSSlideOuter .lSPager.lSGallery img {
+    height: auto; }
+
+  .san-pham-all .plc {
+    display: none; }
+
+  .product-top .card-img-top,
+  .san-pham-all .card-img-top {
+    height: 120px; }
+
+  select {
+    width: 25%; }
+
+  .hotline-sp {
+    display: none; } }
 
 /*# sourceMappingURL=responsive.css.map */
