--- a/css/style.css
+++ b/css/style.css
@@ -1471,5 +1471,9 @@ a.options {
     transform: rotate(0) scale(1) skew(1deg);
   }
 }
-
+.line-footer{
+  background: #ffc000;
+  width: 100%;
+  height: 3px;
+}
 /*# sourceMappingURL=style.css.map */
